# motor

./: CMakeLists.txt  Kconfig  prj.conf
.cache/clangd/index/: adc.c.82DFF814498A13E3.idx  adc.h.9465446CAE6DA253.idx  controller.c.FFF34189A26C159B.idx  controller.h.771583BD4AFEC14D.idx  font_16x16.h.B8E3D6C7D1F14536.idx  font_8x8.c.4113BDE0E306656C.idx  font_8x8.h.E99005E1666B29F3.idx  lcd_test.h.CD66C95BE68CFC28.idx  main.c.68ABF6FE2C133765.idx  menu.c.390F7B9038954C17.idx  menu.h.8665799467D726EF.idx  motor.c.7B10633D3AAD3DBB.idx  motor.h.E9C75B379B8FE8EE.idx  pannel.c.B41345362695395B.idx  pannel.h.B888265CE20E859D.idx  speed.c.4AED4E4D3D94F1F1.idx  speed.h.189AA76B36C6F2CC.idx  svpwm.c.DB5F28E2B2A83296.idx  svpwm.h.1D0655541C11E1B0.idx
inc/: lcd_test.h
inc/menu/: font_16x16.h  font_8x8.h  menu.h  pannel.h
inc/motor/: adc.h  controller.h  mc.h  motor.h  speed.h  svpwm.h
src/: lcd_test.c  main.c  menu.c
src/menu/: font_16x16.c  font_8x8.c  menu.c  pannel.c
src/motor/: adc.c  controller.c  mc.c  menu.c  motor.c  motor_menu.c  speed.c  svpwm.c
